--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,10 +7,12 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="21" />
-	
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -30,6 +32,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".QualityReportActivity"
+            android:label="@string/title_activity_quality_report" >
         </activity>
     </application>
 
